--- a/src/apps/copo_single_cell_submission/templates/copo/copo_single_cell.html
+++ b/src/apps/copo_single_cell_submission/templates/copo/copo_single_cell.html
@@ -2,7 +2,7 @@
 {% load static %} {% load web_tags %} 
 {%load html_tags %}
 
-{% block title %}Single Cell{% endblock %}
+{% block title %}{{ ui_component }}{% endblock %}
 
 {% block stylesheet_block%}
 <style>
@@ -19,20 +19,21 @@
 </style>
 
 {% endblock %} 
-{% block title_block %}Single Cell{% endblock %}
+{% block title_block %}{{ ui_component }}{% endblock %}
 {% block tagline_block%} {% endblock %}
 {% block browse_header_block %} {% csrf_token %}
 <div hidden id="hidden_attrs">
   <!-- hidden attributes  -->
   <input type="hidden" id="profile_title" value="{{ profile.title }}" />
   <input type="hidden" id="profile_id" value="{{ profile_id }}" />
+  <input type="hidden" id="schema_name" value="{{ schema_name }}" />
 
   <input
     type="hidden"
     id="profile_type"
     value="{{ profile.type }}"
   />
-  <input type="hidden" id="nav_component_name" value="singlecell" />
+  <input type="hidden" id="nav_component_name" value="{{ ui_component }}" />
   <input
     type="hidden"
     id="blank_manifest_url"
@@ -43,7 +44,8 @@
     <input
       type="hidden"
       id="blank_manifest_url_{{checklist.primary_id}}"
-      value="{{ schema_name|get_blank_manifest_url:checklist.primary_id   }}"
+      value="{% url 'copo_single_cell_submission:download_initial_manifest' schema_name=schema_name  profile_id=profile_id  checklist_id=checklist.primary_id %}"
+      <!--value="{{ schema_name|get_blank_manifest_url:checklist.primary_id   }}"-->
     />
   {% endfor %}
   <input
@@ -73,10 +75,10 @@
   >
     <div class="copo-webui-popover">
       <div class="webui-popover-inner">
-        <h3 class="copo-webui-popover-title">Single Cell - Getting started</h3>
+        <h3 class="copo-webui-popover-title">{{ ui_component }} - Getting started</h3>
         <div class="copo-webui-popover-content">
           <div class="webpop-content-div">
-            The <strong>Single Cell</strong> component of a profile <br /><br />
+            The <strong>{{ ui_component }}</strong> component of a profile <br /><br />
             Select the desired checklist from the dropdown menu then, click the
             <button class="circular tiny ui icon brown button">
               <i class="icon download sign"></i>
@@ -164,7 +166,7 @@ data-backdrop="static" data-keyboard="false">
 <div
   id="component_table_loader"
   class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-5"
-  data-copo-tour-id="singlecell_table"
+  data-copo-tour-id="{{ui_component}}_table"
 ></div>
 <!-- div used by the quick tour agent -->
 
