singlecell: submit ena project

--- a/src/apps/copo_single_cell_submission/templates/copo/copo_single_cell.html
+++ b/src/apps/copo_single_cell_submission/templates/copo/copo_single_cell.html
@@ -200,7 +200,7 @@ data-backdrop="static" data-keyboard="false">
 {% block component_info%}
 <div
   style="display: none; margin-top: 30px"
-  id="singlecell_submission_info"
+  id="submission_info"
   class="alert alert-info"
   role="alert"
 ></div>
