--- a/src/apps/copo_landing_page/templates/base1.html
+++ b/src/apps/copo_landing_page/templates/base1.html
@@ -70,7 +70,7 @@
             "lavender_bw.jpg",
             image_pre + "lavender1_bw.jpg", image_pre + "mist_bw.jpg", image_pre + "otter_bw.jpg"
         ]
-        var content_classes = ["gray-theme", "green-theme"]
+        var content_classes = ["grey-theme", "green-theme"]
       
     </script>
     
