--- a/static/assets/css/base_styles.css
+++ b/static/assets/css/base_styles.css
@@ -197,7 +197,7 @@ body {
     color: rgba(65, 65, 65, 1) !important;
 }
 
-.gray-theme {
+.grey-theme {
     background-color: rgba(65, 65, 65, 1);
     color: #eaf0f0;
 }
