--- a/src/apps/copo_read_submission/templates/copo/copo_read.html
+++ b/src/apps/copo_read_submission/templates/copo/copo_read.html
@@ -35,7 +35,7 @@
   <input
     type="hidden"
     id="blank_manifest_url"
-    value="{{  'READ'| get_blank_manifest_url  }}"
+    value="{{  'read'| get_blank_manifest_url  }}"
   />
   
   <input
