Added manifests top navigation link

--- a/src/apps/copo_landing_page/templates/nav_dropdown.html
+++ b/src/apps/copo_landing_page/templates/nav_dropdown.html
@@ -39,7 +39,7 @@
                        aria-expanded="false">Help <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li role="presentation"><a href="https://copo-docs.readthedocs.io/en/latest/" target="_blank">COPO's Documentation</a></li>
-                        <li role="presentation"><a href="/ebp" target="_parent">Earth Biogenome Project Resources</a></li>
+                        <li role="presentation"><a href="/manifests/index" target="_parent">Manifests/Checklists</a></li>
                         <li role="presentation"><a href="/contact" target="_parent">Contact Us</a></li>
                     </ul>
                 </li>
