update the blank manifest name

--- a/src/apps/copo_sample/templates/copo/copo_general_sample.html
+++ b/src/apps/copo_sample/templates/copo/copo_general_sample.html
@@ -47,7 +47,7 @@
     <input
       type="hidden"
       id="blank_manifest_url_{{checklist.primary_id}}"
-      value="{{ checklist.primary_id |add:'_sample'  | get_blank_manifest_url  }}"
+      value="{{ checklist.primary_id  | get_blank_manifest_url  }}"
     />
   {% endfor %}
   <input
